# streamlit-page-analytics

./: .gitignore  .pre-commit-config.yaml  .safety-project.ini  AUTHORS  DEVELOPMENT.md  LICENSE  LINTING.md  MANIFEST.in  Makefile  Pipfile  README.md  Taskfile.yaml  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: README.md  distributions.yml  security.yml  test-and-build.yml
dashboard/: snowflake_views_dynamic_tables.sql
scripts/: add_license.sh  install-hooks.sh  lint.py  lint.sh  make_zip_dist.sh
streamlit_page_analytics/: __init__.py  config.py  streamlit_page_analytics.py
streamlit_page_analytics/models/: __init__.py  extracted_widget.py  user_event.py  user_event_action.py  widget.py  widget_attribute.py  widget_mapping.py  widget_mapping_key.py  widget_values.py
streamlit_page_analytics/utils/: __init__.py  clean_values.py  copy_methods.py  hashing.py
streamlit_page_analytics/widgets/: __init__.py  form_tracking.py  user_event_logger.py  widget_attribute_extractor.py  wrapped_widget.py
tests/: requirements-test.txt  test_form_widgets.py  test_log_identifiers.py  test_mask_all_values.py  test_mask_text_input.py  test_multiple_wraps.py  test_page_tracking.py  test_sidebar_widgets.py  test_widgets.py  test_widgets_positional.py  testing_framework.py
