[sdist]
formats = zip,gztar

[bdist_wheel]
universal = 0

[metadata]
license_files = LICENSE, AUTHORS

[flake8]
max-line-length = 88
extend-ignore =
    # E203: whitespace before ':' (conflicts with black)
    E203,
    # W503: line break before binary operator (conflicts with black)
    W503,
    # E501: line too long (handled by black)
    E501
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    *.egg-info,
    .venv,
    .tox
per-file-ignores =
    __init__.py:F401
    # Allow star imports in __init__.py files
    streamlit_page_analytics/__init__.py:F401,F403
